--- a/app/views/index.jade
+++ b/app/views/index.jade
@@ -11,7 +11,8 @@ block content
 
   - each repo in repos
     p(title=repo.secret)
-      strong= repo.name
+      strong
+        a(href='http://github.com/' + repo.name) #{repo.name}
     ul
       - each entry in repo.timeEntries
         li
